Opened 7 years ago
Closed 7 years ago
#14308 closed bug (fixed)
Cannot redirect stderr using posix_spawn
Reported by: | leorize | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | Unscheduled |
Component: | System/libroot.so | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Run examples with
$ gcc -o spawnredir spawnredir.c $ gcc -o err err.c $ ./spawnredir
Expected: no output, a file named errlog
appears contains the string something
Reality: the program outputs something
, errlog
file appears but empty
Attachments (2)
Change History (4)
by , 7 years ago
Attachment: | spawnredir.c added |
---|
by , 7 years ago
comment:1 by , 7 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:2 by , 7 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in 20694a04585f349f3815d13c1fbbccee66c782d6 (no hrev generated).