src/system/libroot/posix/spawn.cpp
@@ -402,7 +402,7 @@ process_file_actions(const posix_spawn_file_actions_t *_actions, int *errfd)
 			if (fd == -1)
 				return errno;
 			if (fd != action->fd) {
-				if (dup2(action->fd, fd) != 0)
+				if (dup2(fd, action->fd) == -1)
 					return errno;
 				if (close(fd) != 0)
 					return errno;
