src/tests/system/libroot/posix/posix_spawn_redir_err.c
@@ -1,0 +1,7 @@
+#include <unistd.h>
+
+int main() {
+  const char msg[] = "something";
+  write(2, msg, sizeof(msg));
+  return 0;
+}
